--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <app-root></app-root>
 </body>
 </html>
