--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <script src="https://apis.google.com/js/platform.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body>
   <app-root></app-root>
