--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <script src="https://apis.google.com/js/platform.js"></script>
   <script src="https://apis.google.com/js/api.js"></script>
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
   <app-root></app-root>
